--- a/templates/index.html
+++ b/templates/index.html
@@ -3,10 +3,10 @@
   <head>
     <style>
       * {
-        margin: 0;
-        padding: 0;
-        box-sizing: border-box;
-      }
+      margin: 0;
+      padding: 0;
+      box-sizing: border-box;
+        }
       nav {
         display: flex;
         flex-wrap: wrap;
@@ -15,61 +15,35 @@
         justify-content: space-between;
         overflow: auto;
       }
-    </style>
+     </style>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Kayos-Demo</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
   </head>
   <body style="background-color: #dbfcff">
-    <div>
-      <nav class="navbar navbar-expand-lg bg-body-tertiary">
-        <div class="container-fluid" style="text-align:center;">
-          <a class="navbar-brand" href="#">Kayos-AI Assist</a>
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-              <li class="nav-item">
-                <a class="nav-link active" aria-current="page" href="#">Home</a>
-              </li>
-              <li class="nav-item">
-                <a class="nav-link" href="https://kayosaifitness.company.site/">Buy Now</a>
-              </li>
-            </ul>
-          </div>
+  <div>
+    <nav class="navbar navbar-expand-lg bg-body-tertiary">
+      <div class="container-fluid" style="text-align:center;">
+        <a class="navbar-brand" href="#">Kayos-AI Assist</a>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a class="nav-link active" aria-current="page" href="#">Home</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="https://kayosaifitness.company.site/">Buy Now</a>
+            </li>
+          </ul>
         </div>
-      </nav>
-    </div>
+      </div>
+    </nav>
+  </div>
     <h1 style="padding-left: 50px">Live streaming</h1>
     <div style="padding-left: 50px">
-      <video id="videoElement" width="50%" autoplay></video>
-      <button id="stopButton" class="btn btn-primary" tabindex="-1" role="button" aria-disabled="true">Stop Recording</button>
+        <img src="{{ url_for('video') }}" width="50%"/>
+        <a href="{{ url_for('stop_recording') }}" class="btn btn-primary " tabindex="-1" role="button" aria-disabled="true">Stop Recording</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-    <script>
-      const videoElement = document.getElementById('videoElement');
-      const stopButton = document.getElementById('stopButton');
-
-      // Request camera access permission
-      navigator.mediaDevices.getUserMedia({ video: true })
-        .then(function(stream) {
-          // Camera access granted
-          videoElement.srcObject = stream;
-        })
-        .catch(function(error) {
-          // Camera access denied or an error occurred
-          console.log('Failed to access camera:', error);
-        });
-
-      stopButton.addEventListener('click', function() {
-        // Stop recording functionality
-        fetch('/stop_recording')
-          .then(function(response) {
-            console.log(response);
-          })
-          .catch(function(error) {
-            console.log('Error stopping recording:', error);
-          });
-      });
-    </script>
   </body>
 </html>
