--- a/templates/index.html
+++ b/templates/index.html
@@ -41,7 +41,7 @@
   </div>
     <h1 style="padding-left: 50px">Live streaming</h1>
     <div style="padding-left: 50px">
-        <img src="{{ url_for('video') }}" width="50%"/>
+        <img src="{{ url_for('video', _scheme='https', _external=True) }}" width="50%"/>
         <a href="{{ url_for('stop_recording') }}" class="btn btn-primary " tabindex="-1" role="button" aria-disabled="true">Stop Recording</a>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
