--- a/templates/index.html
+++ b/templates/index.html
@@ -1,49 +1,78 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
-  <head>
-    <style>
-      * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-        }
-      nav {
-        display: flex;
-        flex-wrap: wrap;
-        align-items: center;
-        background-color: #6194d5;
-        justify-content: space-between;
-        overflow: auto;
-      }
-     </style>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kayos-Demo</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KK94CHFLLe+nY2dmCWGMq91rCGa5gtU4mk92HdvYe+M/SXH301p5ILy+dN9+nJOZ" crossorigin="anonymous">
-  </head>
-  <body style="background-color: #dbfcff">
-  <div>
-    <nav class="navbar navbar-expand-lg bg-body-tertiary">
-      <div class="container-fluid" style="text-align:center;">
-        <a class="navbar-brand" href="#">Kayos-AI Assist</a>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="https://kayosaifitness.company.site/">Buy Now</a>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-  </div>
+    <style>
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        nav {
+            display: flex;
+            flex-wrap: wrap;
+            align-items: center;
+            background-color: #6194d5;
+            justify-content: space-between;
+            overflow: auto;
+        }
+    </style>
+</head>
+<body style="background-color: #dbfcff">
+    <div>
+        <nav class="navbar navbar-expand-lg bg-body-tertiary">
+            <div class="container-fluid" style="text-align:center;">
+                <a class="navbar-brand" href="#">Kayos-AI Assist</a>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="https://kayosaifitness.company.site/">Buy Now</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+    </div>
+
     <h1 style="padding-left: 50px">Live streaming</h1>
     <div style="padding-left: 50px">
-        <img src="{{ url_for('video', _scheme='https', _external=True) }}" width="50%"/>
-        <a href="{{ url_for('stop_recording') }}" class="btn btn-primary " tabindex="-1" role="button" aria-disabled="true">Stop Recording</a>
+        <video id="videoPlayer" autoplay width="50%" style="border: 2px solid black;"></video>
+        <button id="startButton">Start Streaming</button>
+        <button id="stopButton">Stop Streaming</button>
     </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ENjdO4Dr2bkBIFxQpeoTz1HIcje39Wm4jDKdf19U8gI4ddQ3GYNS7NTKfAdVQSZe" crossorigin="anonymous"></script>
-  </body>
+
+    <script>
+        const videoPlayer = document.getElementById('videoPlayer');
+        const startButton = document.getElementById('startButton');
+        const stopButton = document.getElementById('stopButton');
+
+        startButton.addEventListener('click', startStreaming);
+        stopButton.addEventListener('click', stopStreaming);
+
+        function startStreaming() {
+            navigator.mediaDevices.getUserMedia({ video: true })
+                .then(stream => {
+                    videoPlayer.srcObject = stream;
+                })
+                .catch(error => {
+                    console.log('Error accessing camera:', error);
+                });
+        }
+
+        function stopStreaming() {
+            const stream = videoPlayer.srcObject;
+            const tracks = stream.getTracks();
+
+            tracks.forEach(track => track.stop());
+            videoPlayer.srcObject = null;
+        }
+    </script>
+</body>
 </html>
+
