--- a/templates/index.html
+++ b/templates/index.html
@@ -54,6 +54,7 @@
             console.log("Error accessing camera:", error);
           });
       }
+      startCamera()
     </script>
   </body>
 </html>
