--- a/templates/index.html
+++ b/templates/index.html
@@ -45,11 +45,10 @@
     </div>
     <script>
       const videoFrame = document.getElementById("videoFrame");
-      video.srcObject = "{{ url_for('video') }}";
       function startCamera() {
         navigator.mediaDevices.getUserMedia({ video: true })
           .then((stream) => {
-            videoFrame.srcObject = stream;
+            videoFrame.srcObject = "{{ url_for('video') }}";
           })
           .catch((error) => {
             console.log("Error accessing camera:", error);
